--- a/usa/index.html
+++ b/usa/index.html
@@ -60,7 +60,10 @@
                 <span class="sr-only">Vereinigte Staaten</span>
               </div>
               <h3 class="card-title">Elon Musk</h3>
-              <p class="card-subtitle">Tech-Pionier & CEO von SpaceX</p>
+              <p class="card-subtitle">
+                Tech-Pionier & CEO von SpaceX, Tesla, Neuralink, The Boring
+                Company, X und xAI
+              </p>
               <div class="card-cta" aria-label="Elon Musks Profil ansehen">
                 <span class="cta-text">Profil erkunden</span>
                 <svg class="cta-icon" viewBox="0 0 24 24" aria-hidden="true">
