--- a/usa/index.html
+++ b/usa/index.html
@@ -65,7 +65,7 @@
                 Company, X und xAI
               </p>
               <div class="card-cta" aria-label="Elon Musks Profil ansehen">
-                <span class="cta-text">Profil erkunden</span>
+                <span class="cta-text">Zum Profil</span>
                 <svg class="cta-icon" viewBox="0 0 24 24" aria-hidden="true">
                   <path
                     d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
