--- a/usa/index.html
+++ b/usa/index.html
@@ -4,21 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>USA | factico.</title>
+    <!-- Favicon hinzufügen -->
     <link rel="icon" type="image/png" href="https://i.imgur.com/6Fyu7WL.png" />
-    <link rel="stylesheet" href="../../styles.css" />
+    <link rel="stylesheet" href="../styles.css" />
   </head>
-  <body>
+  <body class="usa-root">
     <header class="party-header">
       <div class="header-container">
-        <a href="../../" class="factico-logo">
+        <!-- Link zurück zur Startseite mit dem factico.-Logo -->
+        <a href="../" class="factico-logo-img">
+          <!-- Hier das Logo von factico -->
           <img
             src="https://i.imgur.com/6Fyu7WL.png"
             alt="factico. Logo"
-            class="logo-img"
+            class="factico-logo-img"
           />
         </a>
+
         <div class="header-title-container">
           <h1 class="party-politician-name">USA</h1>
+          <h2 class="party-description">United States of America</h2>
         </div>
         <img
           src="https://i.imgur.com/Qz5B6mW.jpg"
