--- a/usa/index.html
+++ b/usa/index.html
@@ -34,7 +34,7 @@
     </header>
 
     <section class="personalities">
-      <h2>Visionäre der Vereinigten Staaten</h2>
+      <h2>Interessante Personen der USA</h2>
       <div class="personality-grid">
         <article class="personality-card">
           <a href="https://factico.eu/usa/musk/" class="card-link">
@@ -81,6 +81,53 @@
           </a>
         </article>
       </div>
+
+      <article class="personality-card">
+        <a href="https://factico.eu/usa/musk/" class="card-link">
+          <div class="card-media">
+            <img
+              src="https://i.imgur.com/XQQ3xtT.jpg"
+              alt="Elon Musk"
+              class="card-image"
+              loading="lazy"
+            />
+            <div class="media-overlay"></div>
+          </div>
+          <div class="card-content">
+            <div class="nationality">
+              <svg class="flag-icon" viewBox="0 0 16 12" aria-hidden="true">
+                <path fill="#B31942" d="M0 0h16v12H0z" />
+                <path
+                  fill="#fff"
+                  d="M0 0h16v1.5H0zm0 3h16v1.5H0zm0 3h16v1.5H0zm0 3h16v1.5H0zm0 3h16v1.5H0z"
+                />
+                <path fill="#3C3B6E" d="M0 0h6.4v7H0z" />
+                <!-- Vereinfachte Sterne -->
+                <path
+                  fill="#fff"
+                  d="M1 1h.5v.5H1zm1.5 0h.5v.5h-.5zm1.5 0h.5v.5h-.5zm1.5 0h.5v.5h-.5zM1 2.5h.5v.5H1zm1.5 0h.5v.5h-.5zm1.5 0h.5v.5h-.5zm1.5 0h.5v.5h-.5z"
+                />
+              </svg>
+              <span class="sr-only">Vereinigte Staaten</span>
+            </div>
+            <h3 class="card-title">Elon Musk</h3>
+            <p class="card-subtitle">
+              Tech-Pionier & CEO von SpaceX, Tesla, Neuralink, The Boring
+              Company, X und xAI
+            </p>
+            <div class="card-cta" aria-label="Elon Musks Profil ansehen">
+              <span class="cta-text">Zum Profil</span>
+              <svg class="cta-icon" viewBox="0 0 24 24" aria-hidden="true">
+                <path
+                  d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
+                />
+              </svg>
+            </div>
+          </div>
+        </a>
+      </article>
+    </div>
+    
     </section>
 
     <footer class="party-footer">
