--- a/afd/index.html
+++ b/afd/index.html
@@ -48,7 +48,7 @@
             eurokritisch
           </p>
 
-          <h3>Highlights</h3>
+          <h3>Facts</h3>
           <p>
             <strong>AfD im Bundestag:</strong> Seit 2017 ist die AfD mit starken
             Ergebnissen im Bundestag vertreten und hat sich als wichtige
@@ -121,40 +121,37 @@
           Details anzeigen <span class="arrow">▼</span>
         </button>
 
-        <!-- Zusammenklappbarer Inhalt -->
-        <div class="collapsible-content">
-          <p class="party-highlight-description">
-            Im März 2021 stufte das
-            <strong>Bundesamt für Verfassungsschutz (BfV)</strong> die
-            <strong>AfD</strong> als
-            <mark>rechtsextremistischen Verdachtsfall</mark> ein. Damit wurde
-            die Beobachtung der Partei mit nachrichtendienstlichen Mitteln
-            ermöglicht. Diese Entscheidung stützte sich auf eine Untersuchung,
-            die bereits 2019 eingeleitet wurde. Eine Begründung zur Einstufung
-            wurde nicht mitgeteilt.
-          </p>
+<!-- Zusammenklappbarer Inhalt -->
+<div class="collapsible-content afd-root">
+  <p class="party-highlight-description">
+    Im März 2021 stufte das
+    <strong>Bundesamt für Verfassungsschutz (BfV)</strong> die
+    <strong>AfD</strong> als
+    <mark class="afd">rechtsextremistischen Verdachtsfall</mark> ein. Damit wurde
+    die Beobachtung der Partei mit nachrichtendienstlichen Mitteln ermöglicht.
+    Diese Entscheidung stützte sich auf eine Untersuchung, die bereits 2019
+    eingeleitet wurde. Eine Begründung zur Einstufung wurde nicht mitgeteilt.
+  </p>
 
-          <p class="party-highlight-description">
-            Die <strong>AfD</strong> klagte gegen diese Einstufung und konnte
-            zunächst per Eilantrag verhindern, dass sie öffentlich als
-            Verdachtsfall bezeichnet wurde. Doch 2022 entschied das
-            <strong>Verwaltungsgericht Köln</strong>, dass die Einstufung
-            zulässig sei, da es ausreichend Anhaltspunkte für
-            <mark>verfassungsfeindliche Bestrebungen</mark> gebe. Die Partei
-            legte daraufhin Berufung ein, die 2024 vom
-            <strong>Oberverwaltungsgericht Münster</strong>
-            zurückgewiesen wurde.
-          </p>
+  <p class="party-highlight-description">
+    Die <strong>AfD</strong> klagte gegen diese Einstufung und konnte zunächst
+    per Eilantrag verhindern, dass sie öffentlich als Verdachtsfall bezeichnet
+    wurde. Doch 2022 entschied das <strong>Verwaltungsgericht Köln</strong>,
+    dass die Einstufung zulässig sei, da es ausreichend Anhaltspunkte für
+    <mark class="afd">verfassungsfeindliche Bestrebungen</mark> gebe. Die Partei
+    legte daraufhin Berufung ein, die 2024 vom
+    <strong>Oberverwaltungsgericht Münster</strong> zurückgewiesen wurde.
+  </p>
 
-          <p class="party-highlight-description">
-            <strong>AfD-Kritiker</strong> sehen in der Einstufung ein legitimes
-            Mittel zur Verteidigung der freiheitlich-demokratischen
-            Grundordnung. Andere halten sie für
-            <mark>politisch motiviert</mark>. Die
-            <strong>Bundesregierung</strong> verweigerte auf eine Anfrage der
-            AfD detaillierte Auskünfte zu den angewandten geheimdienstlichen
-            Methoden unter Verweis auf das <mark>Staatswohl</mark>.
-          </p>
+  <p class="party-highlight-description">
+    <strong>AfD-Kritiker</strong> sehen in der Einstufung ein legitimes Mittel
+    zur Verteidigung der freiheitlich-demokratischen Grundordnung. Andere halten
+    sie für <mark class="afd">politisch motiviert</mark>. Die
+    <strong>Bundesregierung</strong> verweigerte auf eine Anfrage der AfD
+    detaillierte Auskünfte zu den angewandten geheimdienstlichen Methoden unter
+    Verweis auf das <mark class="afd">Staatswohl</mark>.
+  </p>
+</div>
 
           <p class="party-highlight-description">
             <strong>AfD-Politiker</strong> bezeichnen die Einstufung als
