--- a/afd/index.html
+++ b/afd/index.html
@@ -122,7 +122,7 @@
         </button>
 
 <!-- Zusammenklappbarer Inhalt -->
-<div class="collapsible-content afd-root">
+<div class="collapsible-content">
   <p class="party-highlight-description">
     Im März 2021 stufte das
     <strong>Bundesamt für Verfassungsschutz (BfV)</strong> die
@@ -145,21 +145,21 @@
 
   <p class="party-highlight-description">
     <strong>AfD-Kritiker</strong> sehen in der Einstufung ein legitimes Mittel
-    zur Verteidigung der freiheitlich-demokratischen Grundordnung. Andere halten
-    sie für <mark class="afd">politisch motiviert</mark>. Die
-    <strong>Bundesregierung</strong> verweigerte auf eine Anfrage der AfD
-    detaillierte Auskünfte zu den angewandten geheimdienstlichen Methoden unter
-    Verweis auf das <mark class="afd">Staatswohl</mark>.
+    zur Verteidigung der <mark class="afd">freiheitlich-demokratischen
+    Grundordnung</mark>. Andere halten sie für <mark class="afd">politisch
+    motiviert</mark>. Die <strong>Bundesregierung</strong> verweigerte auf eine
+    Anfrage der AfD detaillierte Auskünfte zu den angewandten geheimdienstlichen
+    Methoden unter Verweis auf das <mark class="afd">Staatswohl</mark>.
+  </p>
+
+  <p class="party-highlight-description">
+    <strong>AfD-Politiker</strong> bezeichnen die Einstufung als
+    <mark class="afd">Versuch, eine unliebsame Oppositionspartei zu
+    kriminalisieren</mark>, während Vertreter der Regierung und des
+    Verfassungsschutzes betonen, dass es sich um eine fachliche, nicht politische
+    Entscheidung handele.
   </p>
 </div>
-
-          <p class="party-highlight-description">
-            <strong>AfD-Politiker</strong> bezeichnen die Einstufung als
-            „Versuch, eine unliebsame Oppositionspartei zu kriminalisieren“,
-            während Vertreter der Regierung und des Verfassungsschutzes betonen,
-            dass es sich um eine fachliche, nicht politische Entscheidung
-            handele.
-          </p>
 
           <div class="smallvideo-container">
             <iframe
