--- a/afd/weidel/index.html
+++ b/afd/weidel/index.html
@@ -61,7 +61,7 @@
             <h3>Politische Positionen</h3>
             <p><strong>Schwerpunkte:</strong> Wirtschafts- und Steuerpolitik, Migrationspolitik, nationale Souveränität</p>
       
-            <h3>Highlights</h3>
+            <h3>Facts</h3>
             <p>Weidel ist in der politischen Landschaft durch ihre scharfe Kritik an der EU und der Migrationspolitik bekannt geworden. Ihre Rhetorik und ihr Engagement für eine restriktive Asylpolitik sowie ihre klare Haltung gegen die Corona-Maßnahmen der Regierung sorgten immer wieder für öffentliche Diskussionen. Sie wird zudem häufig für ihre Positionen zur Europäischen Union kritisiert, da sie eine Abschaffung des Euro und eine Rückkehr zu nationalen Währungen befürwortet.</p>
             </div>
       
