--- a/bsw/index.html
+++ b/bsw/index.html
@@ -94,26 +94,26 @@
 
             <div class="collapsible-content">
                 <p class="party-highlight-description">
-                    Die <strong>Co-Parteivorsitzende des BSW, Amira Mohamed Ali</strong>, sorgte mit einer <strong>kontroversen Aussage zu Abschiebungen</strong> für Aufsehen. In einem Interview mit Tilo Jung
-                    äußerte sie sich <strong>sehr skeptisch gegenüber Abschiebungen</strong> und ließ erkennen, dass sie diese <strong>grundsätzlich ablehnen</strong> würde.
-                    Sie betonte die <strong>Bedeutung "freiwilliger Ausreisen"</strong> und bezeichnete Abschiebungen als <mark>"inhuman"</mark>.
+                  Die <strong>Co-Parteivorsitzende des BSW, Amira Mohamed Ali</strong>, sorgte mit einer <strong>kontroversen Aussage zu Abschiebungen</strong> für Aufsehen. In einem Interview mit Tilo Jung
+                  äußerte sie sich <strong>sehr skeptisch gegenüber Abschiebungen</strong> und ließ erkennen, dass sie diese <strong>grundsätzlich ablehnen</strong> würde.
+                  Sie betonte die <strong>Bedeutung "freiwilliger Ausreisen"</strong> und bezeichnete Abschiebungen als <mark class="bsw">inhuman</mark>.
                 </p>
                 <p class="party-highlight-description">
-                    Auf die Frage von Tilo Jung, ob sie generell gegen Abschiebungen sei ("Egal wohin, egal wer?"), antwortete Amira Mohamed Ali
-                    damals: <strong>„Ich bin generell gegen die Abschiebepraxis, die es bis jetzt gibt. Keine Abschiebung nach Afghanistan, keine
-                    Abschiebung nach Syrien. Gar nichts!”</strong>
+                  Auf die Frage von Tilo Jung, ob sie generell gegen Abschiebungen sei ("Egal wohin, egal wer?"), antwortete Amira Mohamed Ali
+                  damals: <strong>„Ich bin generell gegen die Abschiebepraxis, die es bis jetzt gibt. Keine Abschiebung nach Afghanistan, keine
+                  Abschiebung nach Syrien. Gar nichts!”</strong>
                 </p>
                 <p class="party-highlight-description">
-                    Diese Aussage steht <strong>im klaren Widerspruch zu geltendem Recht</strong>, das Abschiebungen in bestimmten Fällen vorsieht und
-                    auch <strong>von der Bevölkerung mehrheitlich befürwortet</strong> wird.
-                    Kritiker werfen Amira Mohamed Ali vor, <strong>rechtsstaatliche Prinzipien zu missachten</strong> und die <strong>Notwendigkeit von
-                    Abschiebungen zur Durchsetzung des Rechtsstaates zu ignorieren</strong>.
+                  Diese Aussage steht <strong>im klaren Widerspruch zu geltendem Recht</strong>, das Abschiebungen in bestimmten Fällen vorsieht und
+                  auch <strong>von der Bevölkerung mehrheitlich befürwortet</strong> wird.
+                  Kritiker werfen Amira Mohamed Ali vor, <strong>rechtsstaatliche Prinzipien zu missachten</strong> und die <strong>Notwendigkeit von
+                  Abschiebungen zur Durchsetzung des Rechtsstaates zu ignorieren</strong>.
                 </p>
                 <p class="party-highlight-description">
-                    Zudem wird kritisiert, dass die <strong>Aussage im Widerspruch zur eher restriktiven Migrationspolitik des BSW</strong> insgesamt steht,
-                    wie sie insbesondere von Sahra Wagenknecht vertreten wird. Es entsteht der Eindruck einer <strong>inhaltlichen Uneinigkeit in der
-                    Parteispitze</strong> und einer <mark>möglichen Schwächung der Glaubwürdigkeit des BSW in Fragen der inneren Sicherheit</mark>.
+                  Zudem wird kritisiert, dass die <strong>Aussage im Widerspruch zur eher restriktiven Migrationspolitik des BSW</strong> insgesamt steht,
+                  wie sie insbesondere von Sahra Wagenknecht vertreten wird. Es entsteht der Eindruck einer <mark class="bsw">inhaltlichen Uneinigkeit in der Parteispitze</mark> und einer <mark class="bsw">möglichen Schwächung der Glaubwürdigkeit des BSW</mark> in Fragen der inneren Sicherheit.
                 </p>
+                
                 <blockquote class="twitter-tweet" data-lang="de">
                     <p lang="de" dir="ltr">
                       Für alle, die mit dem Gedanken spielen, das "Bündnis Sahra 
