--- a/cducsu/index.html
+++ b/cducsu/index.html
@@ -53,7 +53,7 @@
         <strong>Politische Ausrichtung:</strong> Christlich-konservativ,
         bürgerlich-konservativ, Mitte-rechts
       </p>
-      <h3>Highlights</h3>
+      <h3>Facts</h3>
       <p>
         <strong>Maskenaffäre:</strong> Die CDU/CSU geriet während der
         Corona-Pandemie in die Kritik wegen der sogenannten Maskenaffäre.
@@ -140,23 +140,22 @@
             <strong>Aufhebung der Grenzkontrollen</strong> führte nicht nur zu einer
             <strong>unkontrollierten Einreise Hunderttausender Migranten</strong>, sondern
             wird von Kritikern auch in einen
-            <strong>direkten Zusammenhang mit der Zunahme terroristischer Bedrohungen
-            und Anschläge</strong> in Deutschland gebracht.
-        </p>
+            <mark class="cdu">direkten Zusammenhang mit der Zunahme terroristischer Bedrohungen und Anschläge</mark> in Deutschland gebracht.
+          </p>
           <p class="party-highlight-description">
             <strong>Kritiker argumentieren</strong>, dass die
             <strong>CDU/CSU-geführte Regierung Merkel</strong> durch die
             <strong>Grenzöffnung 2015</strong> und die damit verbundene
             <strong>Migrationspolitik</strong> die
-            <strong>Terrorgefahr in Deutschland maßgeblich erhöht</strong> und eine
-            <strong>erhebliche Belastung für die innere Sicherheit</strong> des Landes
+            <mark class="cdu">Terrorgefahr in Deutschland maßgeblich erhöht</mark> und eine
+            <mark class="cdu">erhebliche Belastung für die innere Sicherheit</mark> des Landes
             geschaffen habe. Die
             <strong>unzureichende Kontrolle der Einreisenden</strong> und die
             <strong>Versäumnisse in der Integrationspolitik</strong> werden als
             gravierende Fehler der damaligen Regierung angelastet, die bis heute
-            <mark>negative Auswirkungen</mark> auf die Sicherheit und das
+            <mark class="cdu">negative Auswirkungen</mark> auf die Sicherheit und das
             gesellschaftliche Klima in Deutschland haben.
-        </p>
+          </p>
 
         <div class="smallvideo-container">
           <div class="video-wrapper">
@@ -270,23 +269,23 @@
 
         <div class="collapsible-content">
           <p class="party-highlight-description">
-            Die <strong>Maskenaffäre</strong> erschütterte die CDU/CSU während der
-            <strong>Corona-Pandemie</strong>. Mehrere Unionsabgeordnete, darunter
-            <strong>Nikolas Löbel (CDU)</strong> und <strong>Georg Nüßlein (CSU)</strong>, gerieten
-            in Verdacht, sich durch die Vermittlung von <strong>Maskengeschäften persönlich bereichert</strong> zu haben.
-        </p>
-        <p class="party-highlight-description">
-            Sie sollen <strong>Provisionen in sechsstelliger Höhe</strong> für die
-            Vermittlung von Verträgen zwischen Maskenlieferanten und Behörden
-            erhalten haben. Dies führte zu <strong>Vorwürfen der Vetternwirtschaft und Bereicherung auf Kosten der
-            Allgemeinheit</strong> in einer Zeit der Krise.
-        </p>
-        <p class="party-highlight-description">
-            Die Affäre löste <strong>Empörung in der Bevölkerung</strong> aus und
-            beschädigte das <strong>Ansehen der CDU/CSU</strong> massiv. Beide
-            Abgeordneten traten von ihren Ämtern zurück und schieden aus der
-            Bundestagsfraktion aus. Gegen sie wurden <mark>Ermittlungen wegen Korruptionsverdachts</mark> eingeleitet.
-        </p>        
+              Die <strong>Maskenaffäre</strong> erschütterte die <strong>CDU/CSU</strong> während der
+              <strong>Corona-Pandemie</strong>. Mehrere Unionsabgeordnete, darunter
+              <strong>Nikolas Löbel (CDU)</strong> und <strong>Georg Nüßlein (CSU)</strong>, gerieten
+              in Verdacht, sich durch die Vermittlung von <strong>Maskengeschäften persönlich bereichert</strong> zu haben.
+          </p>
+          <p class="party-highlight-description">
+              Sie sollen <mark class="cdu">Provisionen in sechsstelliger Höhe</mark> für die
+              Vermittlung von Verträgen zwischen Maskenlieferanten und Behörden
+              erhalten haben. Dies führte zu <mark class="cdu">Vorwürfen der Vetternwirtschaft und Bereicherung auf Kosten der
+              Allgemeinheit</mark> in einer Zeit der Krise.
+          </p>
+          <p class="party-highlight-description">
+              Die Affäre löste <strong>Empörung in der Bevölkerung</strong> aus und
+              beschädigte das <mark class="cdu">Ansehen der CDU/CSU massiv</mark>. Beide
+              Abgeordneten traten von ihren Ämtern zurück und schieden aus der
+              Bundestagsfraktion aus. Gegen sie wurden <mark class="cdu">Ermittlungen wegen Korruptionsverdachts</mark> eingeleitet.
+          </p>        
 
           <p class="party-highlight-date">
             <strong>Zeitraum:</strong> 2020 - 2023
@@ -358,22 +357,22 @@
 
         <div class="collapsible-content">
           <p class="party-highlight-description">
-            Die <strong>CDU-Spendenaffäre</strong> unter <strong>Helmut Kohl</strong> ist einer der
-            größten <strong>Parteispendenskandale</strong> der deutschen Geschichte. Es
-            wurde bekannt, dass die CDU über Jahre hinweg <strong>illegale Parteispenden in Millionenhöhe</strong> angenommen hatte.
-        </p>
-        <p class="party-highlight-description">
-            Kohl selbst räumte <strong>schwarze Konten</strong> ein, weigerte sich aber,
-            die Namen der Spender zu nennen. Dies führte zu einem <strong>Vertrauensverlust</strong> in die CDU und zu
-            <strong>Ermittlungen wegen Untreue und Steuerhinterziehung</strong> gegen
-            führende CDU-Politiker.
-        </p>
-        <p class="party-highlight-description">
-            Der Skandal beschädigte das <strong>Image der CDU nachhaltig</strong> und
-            führte zu einer <strong>Debatte über Parteienfinanzierung und Transparenz</strong>. Er gilt
-            als <mark>Sinnbild für politische Intransparenz und mögliche Korruption</mark>
-            in der Ära Kohl.
-        </p>
+              Die <strong>CDU-Spendenaffäre</strong> unter <strong>Helmut Kohl</strong> ist einer der
+              größten <strong>Parteispendenskandale</strong> der deutschen Geschichte. Es
+              wurde bekannt, dass die CDU über Jahre hinweg <mark class="cdu">illegale Parteispenden in Millionenhöhe</mark> angenommen hatte.
+          </p>
+          <p class="party-highlight-description">
+              Kohl selbst räumte <mark class="cdu">schwarze Konten</mark> ein, weigerte sich aber,
+              die Namen der Spender zu nennen. Dies führte zu einem <mark class="cdu">Vertrauensverlust</mark> in die CDU und zu
+              <mark class="cdu">Ermittlungen wegen Untreue und Steuerhinterziehung</mark> gegen
+              führende CDU-Politiker.
+          </p>
+          <p class="party-highlight-description">
+              Der Skandal beschädigte das <mark class="cdu">Image der CDU nachhaltig</mark> und
+              führte zu einer <mark class="cdu">Debatte über Parteienfinanzierung und Transparenz</mark>. Er gilt
+              als <mark class="cdu">Sinnbild für politische Intransparenz und mögliche Korruption</mark>
+              in der Ära Kohl.
+          </p>        
         
           <p class="party-highlight-date">
             <strong>Zeitraum:</strong> 1990er Jahre - 2000er Jahre
@@ -434,16 +433,16 @@
 
         <div class="collapsible-content">
           <p class="party-highlight-description">
-            Das von der <strong>CSU</strong> unter <strong>Alexander Dobrindt</strong> initiierte und von <strong>Andreas Scheuer</strong> weitergeführte Projekt der <mark>Pkw-Maut</mark> für ausländische Autofahrer ist zu einem
+            Das von der <strong>CSU</strong> unter <strong>Alexander Dobrindt</strong> initiierte und von <strong>Andreas Scheuer</strong> weitergeführte Projekt der <mark class="csu">Pkw-Maut</mark> für ausländische Autofahrer ist zu einem
             <strong>kostspieligen Desaster</strong> für die deutschen Steuerzahler geworden. Nachdem der <strong>Europäische Gerichtshof</strong> die Maut für rechtswidrig erklärte, muss der Bund nun
-            <strong>243 Millionen Euro Schadenersatz</strong> an die Betreiberfirmen zahlen.
+            <mark class="csu">243 Millionen Euro Schadenersatz</mark> an die Betreiberfirmen zahlen.
         </p>
         <p class="party-highlight-description">
-            Verkehrsminister <strong>Andreas Scheuer</strong> schloss 2018 Verträge zum Aufbau und Betrieb der Maut ab, noch bevor das Urteil des EuGH vorlag. Diese Verträge wurden nach dem Urteil gekündigt, was zu den hohen Schadenersatzforderungen führte. Ursprünglich forderten die Unternehmen sogar <mark>560 Millionen Euro</mark>.
+            Verkehrsminister <strong>Andreas Scheuer</strong> schloss 2018 Verträge zum Aufbau und Betrieb der Maut ab, noch bevor das Urteil des EuGH vorlag. Diese Verträge wurden nach dem Urteil gekündigt, was zu den hohen Schadenersatzforderungen führte. Ursprünglich forderten die Unternehmen sogar <mark class="csu">560 Millionen Euro</mark>.
         </p>
         <p class="party-highlight-description">
-            Kritiker warfen der <strong>CSU</strong> vor, mit der Pkw-Maut <mark>populistische Politik</mark> zu betreiben und die <strong>europäische Zusammenarbeit zu missachten</strong>. Das Scheitern des Projekts und die hohen Kosten werden als
-            <mark>peinliche Niederlage für die CSU</mark> und als Beispiel für <strong>politisches Fehlmanagement</strong> gewertet. Die Opposition kritisiert insbesondere das Verhalten von <strong>Andreas Scheuer</strong>, der die Verträge übereilt und ohne ausreichende Absicherung abgeschlossen haben soll.
+            Kritiker warfen der <strong>CSU</strong> vor, mit der Pkw-Maut <mark class="csu">populistische Politik</mark> zu betreiben und die <strong>europäische Zusammenarbeit zu missachten</strong>. Das Scheitern des Projekts und die hohen Kosten werden als
+            <mark class="csu">peinliche Niederlage für die CSU</mark> und als Beispiel für <strong>politisches Fehlmanagement</strong> gewertet. Die Opposition kritisiert insbesondere das Verhalten von <strong>Andreas Scheuer</strong>, der die Verträge übereilt und ohne ausreichende Absicherung abgeschlossen haben soll.
         </p>
 
           <p class="party-highlight-date">
