--- a/cducsu/merz/index.html
+++ b/cducsu/merz/index.html
@@ -75,7 +75,7 @@
           <h3>Politische Positionen</h3>
           <p><strong>Schwerpunkte:</strong> Merz’ Standpunkte ändern sich häufig: von fiskalischer Disziplin zu Neuverschuldung, von harter Migrationspolitik zu flexibleren Ansätzen.</p>
          
-          <h3>Highlights</h3>
+          <h3>FACTS</h3>
           <p>
             Im Wahlkampf 2025 versprach Friedrich Merz eine harte Linie bei der
             Schuldenbremse und keine Steuererhöhungen. Wenige Wochen nach der
@@ -130,14 +130,14 @@
         <div class="collapsible-content">
           <p class="party-highlight-description">
             Friedrich Merz trat im Wahlkampf 2025 als Verfechter der
-            <b>Schuldenbremse</b> auf und versprach, fiskalische Disziplin
+            <mark class="cdu">Schuldenbremse</mark> auf und versprach, fiskalische Disziplin
             wiederherzustellen. Er kritisierte die Ampel-Regierung scharf für
             ihre Haushaltspolitik und schloss neue Schulden kategorisch aus.
             Doch kaum war die Wahl vorbei, kündigte er im März 2025 ein
-            <b>500-Milliarden-Euro-Investitionsprogramm</b> mit der SPD an,
-            inklusive Ausnahmen von der Schuldenbremse – ein klarer Bruch seiner
+            <mark class="cdu">500-Milliarden-Euro-Investitionsprogramm</mark> mit der SPD an,
+            inklusive <mark class="cdu">Ausnahmen von der Schuldenbremse</mark> – ein klarer Bruch seiner
             Versprechen.
-          </p>
+        </p>        
 
 <div class="smallvideo-container two-videos">
   <div class="video-wrapper">
