--- a/afd/index.html
+++ b/afd/index.html
@@ -48,7 +48,7 @@
             eurokritisch
           </p>
 
-          <h3>Facts</h3>
+          <h3>FACTS</h3>
           <p>
             <strong>AfD im Bundestag:</strong> Seit 2017 ist die AfD mit starken
             Ergebnissen im Bundestag vertreten und hat sich als wichtige
