--- a/cducsu/index.html
+++ b/cducsu/index.html
@@ -53,7 +53,7 @@
         <strong>Politische Ausrichtung:</strong> Christlich-konservativ,
         bürgerlich-konservativ, Mitte-rechts
       </p>
-      <h3>Facts</h3>
+      <h3>FACTS</h3>
       <p>
         <strong>Maskenaffäre:</strong> Die CDU/CSU geriet während der
         Corona-Pandemie in die Kritik wegen der sogenannten Maskenaffäre.
