--- a/bsw/index.html
+++ b/bsw/index.html
@@ -44,7 +44,7 @@
         <p>
             <strong>Politische Ausrichtung:</strong>  Wirtschaftspolitisch links, konservativ in Gesellschafts- und Migrationsfragen,  skeptisch gegenüber  EU und NATO
         </p>
-        <h3>Kontroversen</h3>
+        <h3>FACTS</h3>
            <p>
         <strong>Kontroverse Aussage zu Abschiebungen durch Amira Mohamed Ali:</strong>  Die Co-Parteivorsitzende Amira Mohamed Ali äußerte in einem Interview mit Tilo Jung im Januar 2024 Skepsis gegenüber Abschiebungen und deutete an, diese <strong>grundsätzlich ablehnen</strong> zu wollen.  Sie betonte die Wichtigkeit "freiwilliger Ausreisen" und bezeichnete Abschiebungen als "inhuman".  Diese Aussage steht <strong>im Widerspruch zu geltendem Recht</strong> und  widerspricht möglicherweise auch der  <strong>restriktiveren Linie des BSW in der Migrationspolitik</strong>, wie sie  Sahra Wagenknecht  vertritt.  Kritiker bemängeln, dass  eine  Ablehnung  von  Abschiebungen  <strong>rechtsstaatliche  Prinzipien  untergräbt</strong> und  die  <strong>Glaubwürdigkeit  des  BSW  in  Sicherheitsfragen  beschädigt</strong>.
     </p>
@@ -113,7 +113,7 @@
                   Zudem wird kritisiert, dass die <strong>Aussage im Widerspruch zur eher restriktiven Migrationspolitik des BSW</strong> insgesamt steht,
                   wie sie insbesondere von Sahra Wagenknecht vertreten wird. Es entsteht der Eindruck einer <mark class="bsw">inhaltlichen Uneinigkeit in der Parteispitze</mark> und einer <mark class="bsw">möglichen Schwächung der Glaubwürdigkeit des BSW</mark> in Fragen der inneren Sicherheit.
                 </p>
-                
+
                 <blockquote class="twitter-tweet" data-lang="de">
                     <p lang="de" dir="ltr">
                       Für alle, die mit dem Gedanken spielen, das "Bündnis Sahra 
