--- a/afd/index.html
+++ b/afd/index.html
@@ -229,7 +229,7 @@
 
           <p class="party-highlight-hashtags">
             <span class="hashtag">#verfassungsschutz</span>
-            <a href="afd.html">#afd</a>
+            <a href="./">#afd</a>
             <span class="hashtag">#hoecke</span>
             <span class="hashtag">#extremismus</span>
           </p>
