--- a/cducsu/index.html
+++ b/cducsu/index.html
@@ -242,7 +242,7 @@
             <span class="hashtag">#migration</span>
             <span class="hashtag">#terror</span>
             <span class="hashtag">#sicherheit</span>
-            <a href="cducsu.html">#cducsu</a>
+            <a href="./">#cducsu</a>
             <span class="hashtag">#merkel</span>
           </p>          
          
@@ -331,7 +331,7 @@
           <p class="party-highlight-hashtags">
             <span class="hashtag">#maskenaffaere</span>
             <span class="hashtag">#korruption</span>
-            <a href="cducsu.html">#cducsu</a>
+            <a href="./">#cducsu</a>
             <span class="hashtag">#corona</span>
           </p>
         </div>
@@ -407,7 +407,7 @@
           </div>
 
           <p class="party-highlight-hashtags">
-            <a href="cducsu.html">#cdu</a>
+            <a href="./">#cdu</a>
             <span class="hashtag">#spendenaffaere</span>
             <span class="hashtag">#kohl</span>
           </p>
@@ -477,7 +477,7 @@
           </div>
 
           <p class="party-highlight-hashtags">
-            <a href="cducsu.html">#cducsu</a>
+            <a href="./">#cducsu</a>
             <span class="hashtag">#dobrindt</span>
             <span class="hashtag">#scheuer</span>
             <span class="hashtag">#verkehrspolitik</span>
