--- a/cducsu/merz/index.html
+++ b/cducsu/merz/index.html
@@ -170,7 +170,7 @@
           </p>
 
           <div class="party-highlight-hashtags">
-            <a href="cducsu.html">#cdu</a>
+            <a href="./">#cdu</a>
             <span class="hashtag">#schuldenbremse</span>
             <span class="hashtag">#wahlversprechen</span>
           </div>
