--- a/fdp/index.html
+++ b/fdp/index.html
@@ -207,7 +207,7 @@
           <p class="party-highlight-hashtags">
             <span class="hashtag">#wortbruch</span>
             <span class="hashtag">#verrat</span>
-            <a href="fdp.html">#fdp</a>
+            <a href="./">#fdp</a>
           </p>
         </div>
       </div>
