--- a/bsw/index.html
+++ b/bsw/index.html
@@ -143,7 +143,7 @@
                     <span class="hashtag">#sicherheit</span>
                     <span class="hashtag">#migration</span>
                     <span class="hashtag">#rechtsstaatlichkeit</span>
-                    <a href="bsw.html">#bsw</a>
+                    <a href="./">#bsw</a>
                     <span class="hashtag">#ali</span>
                 </p>
             </div>
